Troubleshooting Layout Issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -234,7 +234,7 @@ a {
   font-weight: 600;
   margin: 1rem 0;
   outline: 0;
-  padding: 2rem 3rem;
+  padding: 2rem 4vw; /*4vw: 4% of the width of viewport*/
   text-transform: uppercase;
   text-align: center;
   white-space: nowrap;
@@ -332,6 +332,7 @@ a {
   border: 0; /* make border 0 of input field inside div of class input-group */
   flex-grow: 1; /* input field takes all the available space */
   padding: 1.5rem 2rem; /* reducing padding */
+  width: 0; /* let the flex-grow property decide the width of input (Note: if we do not set width:0, browser will assign the width that can be seen on Computed tab of developer tools */
 }
 
 .input-group .btn {
@@ -796,8 +797,9 @@ a {
 }
 
 .block-domain__prices {
+  color: var(--color-headings);
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 6rem); /* height of each row */
   font-size: 2rem;
   font-weight: 600;
